	-- Guard collection of MBeanAttributeInfo against items that would have no getter
	   or setter to prevent ugly IntrospectionExceptions.
	   See https://github.com/swaldman/c3p0/issues/128
	   Thanks @philippscs
	-- Let C3P0PooledConnectionPool manager test introspected authentication that appears
	   perhaps incomplete, and revert to NULL_AUTH (no-arg DataSource.getConnection()) if
	   the test fails.
	   See, should address, https://github.com/swaldman/c3p0/issues/159
	   Thanks @sbaeumlisberger!
c3p0-0.10.0-pre6
	-- Lots of documentation work.
	-- Implement attemptResurrectOnCheckin config parameter.
	   See https://github.com/swaldman/c3p0/issues/47
	   Thanks Bartosz Radaczyński and Igor Khromov!
	-- Add guard to automaticTestTable preventing use of weird or potentially malicious table names.
	   Thanks to Andy at Privitar
        -- Pick up com.mchange.v2.c3p0.impl.DefaultConnectionTester.isValidTimeout as default
	   value of new connectionIsValidTimeout property, so that users upgrading from previous
	   version still capture the setting from the old config, even as their ConnectionTester
	   now falls back to null.
c3p0-0.10.0-pre5
	-- Lots of documenting, condensing, clean-up, etc.
	-- Define connectionIsValidTimeout as an ordinary bean-style config parameter.
  	   Previously users had to set a universal property (in c3p0.properties or System
	   properties) to set this timeout.
	-- Use simplified isValid(...) based timeout by default, use traditional
	   ConnectionTester logic only when users specify or force a ConnectionTester
c3p0-0.10.0-pre4
	-- Define (in a separate, Java 21, project) a loom virtual-threads based
	   TaskRunnerFactory, VirtualThreadPerTaskExecutorTaskRunnerFactory.
	   See https://github.com/swaldman/c3p0-loom
	-- DefineFixedThreadPoolExecutorTaskRunnerFactory, a simple example that
	   replaces c3p0's traditional Thread pool with an unshared ThreadPoolExecutor
	   of size numHelperThreads.