@@ -1,3 +1,6 @@
+	-- Change mind. Eliminate naggingly prescriptive equals/hashCode pseudorequirements
+	   from plugin interfaces, because our canonicalization strategy is by key, doesn' actually
+	   rely upon those implementations.
 	-- Guard collection of MBeanAttributeInfo against items that would have no getter
 	   or setter to prevent ugly IntrospectionExceptions.
 	   See https://github.com/swaldman/c3p0/issues/128
